--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "renamer": "^0.5.7",
     "run-sequence": "^1.2.1",
     "vulcanize": "1.14.8",
-    "web-component-tester": "4.2.2",
+    "web-component-tester": "^4.2.2",
     "web-component-tester-istanbul": "https://github.com/t2ym/web-component-tester-istanbul/tarball/0.10.1"
   },
   "scripts": {
