--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "font-roboto": "PolymerElements/font-roboto-local#1.0.1",
     "pushstate-anchor": "^0.4.0",
     "web-component-tester": "Polymer/web-component-tester#^4.2.2",
-    "simple-color-picker": "^0.0.2"
+    "simple-color-picker": "^0.0.2",
+    "tinycolor": "^1.3.0"
   }
 }
